# GYL3-Claw

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
app/: cli.py  config.py  daemon.py  main.py
app/agent/: __init__.py  agent.py  loader.py  models.py
app/executor/: __init__.py  chat.py  dispatcher.py  rag.py  registry.py  script.py  shell.py  url_executor.py  web_search_executor.py
app/feishu/: client.py  message.py
app/memory/: conversation.py  database.py
app/prompt/: manager.py
app/router/: classifier.py  keyword.py  router.py
app/scheduler/: scheduler.py
app/skill/: __init__.py  loader.py
app/tools/: __init__.py  fetch_url.py  registry.py  run_script.py  shell_cmd.py  stock_quote.py  url_fetcher.py  web_search.py
app/utils/: url_fetcher.py  web_search_default.py
docs/: optimization-plan.md
prompts/: _router.yaml  code.yaml  general.yaml  url_reader.yaml  writing.yaml
scripts/: example.sh
skills/: _agent.md
skills/code-assistant/: SKILL.md
skills/general/: SKILL.md
skills/script-runner/: SKILL.md
skills/shell/: SKILL.md
skills/stock/: SKILL.md
skills/url-reader/: SKILL.md
skills/web-search/: SKILL.md
skills/writing/: SKILL.md
